Remove cron schedule from ci

--- a/.github/workflows/template-sync.yml
+++ b/.github/workflows/template-sync.yml
@@ -1,8 +1,8 @@
 name: actions-template-sync
 
 on:
-  schedule:
-  - cron:  '30 5,17 * * *'
+#  schedule:
+#  - cron:  '30 5,17 * * *'
   workflow_dispatch:
 
 jobs:
