--- a/.templatesyncignore
+++ b/.templatesyncignore
@@ -1,1 +1,14 @@
-*solutions*
+*solutions/a1.h
+*solutions/a2.h
+*solutions/a3.h
+*solutions/a4.h
+*solutions/a5.h
+*solutions/a6.h
+*solutions/a7.h
+*solutions/a8.h
+*solutions/a9.h
+*solutions/b1.h
+*solutions/b2.h
+*solutions/b3.h
+*solutions/c1.h
+*solutions/c2.h
